--- a/src/main/resources/templates/add-student-form.html
+++ b/src/main/resources/templates/add-student-form.html
@@ -24,9 +24,9 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active"
-                       aria-current="page" th:href="@{/login}">Login</a> </li>
-                <li class="nav-item"> <a class="nav-link active"
-                                         aria-current="page" th:href="@{/register}">Register</a>
+                       aria-current="page" th:href="@{/login}">Login</a></li>
+                <li class="nav-item"><a class="nav-link active"
+                                        aria-current="page" th:href="@{/register}">Register</a>
                 </li>
         </div>
     </div>
@@ -34,14 +34,15 @@
 <div class="container">
     <hr/>
     <h3>Add New Student</h3>
-    <hr/> <form th:action="@{/saveStudent}" th:object="${student}" method="POST">
-    <input type="text" th:field="*{name}" class="form-control col-4 mb-4" placeholder="Enter Name"/>
-    <input type="text" th:field="*{surname}" class="form-control col-4 mb-4" placeholder="Enter Surname"/>
-    <input type="text" th:field="*{faculty}" class="form-control col-4 mb-4" placeholder="Enter Faculty"/>
-    <input type="text" th:field="*{age}" class="form-control col-4 mb-4" placeholder="Enter Age"/>
-    <button type="submit" class="btn btn-primary col-2">Save</button>
-    <input type="hidden" th:field="*{id}"/>
-</form>
+    <hr/>
+    <form th:action="@{/saveStudent}" th:object="${student}" method="POST">
+        <input type="text" th:field="*{name}" class="form-control col-4 mb-4" placeholder="Enter Name"/>
+        <input type="text" th:field="*{surname}" class="form-control col-4 mb-4" placeholder="Enter Surname"/>
+        <input type="text" th:field="*{faculty}" class="form-control col-4 mb-4" placeholder="Enter Faculty"/>
+        <input type="text" th:field="*{age}" class="form-control col-4 mb-4" placeholder="Enter Age"/>
+        <button type="submit" class="btn btn-primary col-2">Save</button>
+        <input type="hidden" th:field="*{id}"/>
+    </form>
     <hr/>
     <a th:href="@{/list}">Back to list</a>
 </div>
