--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Student Management System</title>
@@ -20,14 +20,15 @@
                 aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button> <div class="collapse navbar-collapse"
-                       id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
-            </li>
-        </ul>
-    </div>
+        </button>
+        <div class="collapse navbar-collapse"
+             id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
 <br/><br/>
@@ -36,34 +37,37 @@
         <div class="col-md-6 offset-md-3">
             <div th:if="${param.error}">
                 <div class="alert alert-danger">Invalid Email or Password</div>
-            </div> <div th:if="${param.logout}">
-            <div class="alert alert-success"> You have been logged out.</div>
-        </div> <div class="card">
-            <div class="card-header">
-                <h2 class="text-center">Login Form</h2>
-            </div> <div class="card-body">
-            <form method="post" role="form" th:action="@{/login}" class="form-horizontal" >
-                <div class="form-group mb-3">
-                    <label class="control-label"> Email</label>
-                    <input type="text"
-                           id="username"
-                           name="username"
-                           class="form-control"
-                           placeholder="Enter email address" /> </div>
-                <div class="form-group mb-3">
-                    <label class="control-label"> Password</label>
-                    <input type="password"
-                           id="password"
-                           name="password"
-                           class="form-control"
-                           placeholder="Enter password" /> </div>
-                <div class="form-group mb-3">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                    <span> Not registered ? <a th:href="@{/register}">Register/Signup here</a> </span>
+            </div>
+            <div th:if="${param.logout}">
+                <div class="alert alert-success"> You have been logged out.</div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="text-center">Login Form</h2>
                 </div>
-            </form>
-        </div>
-        </div>
+                <div class="card-body">
+                    <form method="post" role="form" th:action="@{/login}" class="form-horizontal">
+                        <div class="form-group mb-3">
+                            <label class="control-label"> Email</label>
+                            <input type="text"
+                                   id="username"
+                                   name="username"
+                                   class="form-control"
+                                   placeholder="Enter email address"/></div>
+                        <div class="form-group mb-3">
+                            <label class="control-label"> Password</label>
+                            <input type="password"
+                                   id="password"
+                                   name="password"
+                                   class="form-control"
+                                   placeholder="Enter password"/></div>
+                        <div class="form-group mb-3">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <span> Not registered ? <a th:href="@{/register}">Register/Signup here</a> </span>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
