--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Registration and Login System</title>
@@ -27,13 +27,14 @@
                 <li class="nav-item">
                     <a class="nav-link active"
                        aria-current="page" th:href="@{/logout}">Logout</a>
-                </li> <li class="nav-item">
-                <a class="nav-link active"
-                   aria-current="page" th:href="@{/list}">Students</a>
-            </li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active"
+                       aria-current="page" th:href="@{/list}">Students</a>
+                </li>
             </ul>
 
-</div>
+        </div>
     </div>
 </nav>
 <div class="container">
@@ -41,7 +42,8 @@
         <h2>List of Registered Users</h2>
     </div>
     <table class="table table-bordered table-hover">
-        <thead class="table-dark"> <tr>
+        <thead class="table-dark">
+        <tr>
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email</th>
